--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <button id="glass" value="0.02" onClick="handleMat(event)">Glass</button> 
         </div>
         <div className="inputs" style="padding: 16px;">
-          <input id="lbinput" placeholder="Enter Weight (in LBs)" onKeyPress="return isNumberKey(event)" style="text-align: right;"/>
+          <input id="lbinput" placeholder="Enter Weight (in grams)" onKeyPress="return isNumberKey(event)" style="text-align: right;"/>
           <label for="lbinput">LB&emsp;</label>
           <label for="lbmult">$</label>
           <input id="lbmult" value="0.05" placeholder="Enter Multiplier (in $)" onKeyPress="return isNumberKey(event)" style="text-align: left;"/>
