--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body onLoad="loadBody()">
       <div className="App">
-        <h1>InariEun Recycle Web App</h1>
+        <h1>Recycle</h1>
         <div className="recyclebuttons">
           <button id="plastic" value="0.05" onClick="handleMat(event)" style="background-color: #b4fa8e">Plastic ($0)</button> 
           <button id="aluminum" value="0.1" onClick="handleMat(event)">Aluminum ($0)</button> 
